--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,14 @@ body {
 	font-weight: 600;
 }
 
+.navbar-light .navbar-toggler {
+	border: none;
+}
+
+.navbar-light .navbar-toggler-icon {
+	color: #ffbf69 !important;
+}
+
 nav ul li a,
 nav ul li a:after,
 nav ul li a:before {
@@ -68,3 +76,122 @@ div.circle ul li a {
     border-radius: 0;
   }
 }
+
+/* Hero Section */
+.wrapper {
+	display: flex;
+}
+
+.wrapper .static-txt {
+	font-size: 40px;
+	color: black;
+	font-weight: 600;
+	line-height: 80px;
+}
+
+.wrapper .dynamic-txts {
+	margin-left: 1px;
+	line-height: 80px;
+	height: 90px;
+	overflow: hidden !important;
+}
+
+.dynamic-txts li{
+	list-style: none;
+	color: #ffbf69;
+	font-size: 40px;
+	font-weight: 600;
+	top: 0;
+	position: relative;
+	animation: slide 20s steps(5)
+	infinite;
+}
+
+@keyframes slide {
+	100%  {
+		top: -400px;
+	}
+}
+
+.dynamic-txts li {
+	position: relative;
+}
+
+.dynamic-txts li::after {
+	content: "";
+	position: absolute;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	background-color: #f8f9fa;
+	border-left: 2px solid #ffbf69;
+	animation: typing 4s steps(10)
+	infinite;
+}
+
+@keyframes typing {
+	40%,
+	60% {
+		left: calc(100% + 30px);
+	}
+	100% {
+		left: 0;
+	}
+}
+
+.hero-image {
+	align-items: center;
+}
+
+/* Footer CSS */
+footer {
+	background-color: black;
+}
+.rounded-social-buttons {
+	text-align: center;
+  }
+
+  .rounded-social-buttons .social-button {
+	display: inline-block;
+	cursor: pointer;
+	padding: 1px 12px;
+	border: 0.125rem solid transparent;
+	text-decoration: none;
+	text-align: center;
+	color: #fefefe;
+	font-size: 25px;
+	font-weight: normal;
+	line-height: 2em;
+	border-radius: 3.3rem;
+	transition: all 0.5s ease;
+	margin-right: 0.25rem;
+	margin-bottom: 0.25rem;
+  }
+
+  .rounded-social-buttons .social-button:hover, .rounded-social-buttons .social-button:focus {
+	-webkit-transform: rotate(360deg);
+		-ms-transform: rotate(360deg);
+			transform: rotate(360deg);
+  }
+
+  .rounded-social-buttons .fa-linkedin,.fa-instagram {
+	font-size: 30px;
+  }
+  .rounded-social-buttons .social-button.linkedin {
+	background: #ffbf69;
+  }
+
+  .rounded-social-buttons .social-button.linkedin:hover, .rounded-social-buttons .social-button.linkedin:focus {
+	color: #ffbf69;
+	background: #fefefe;
+	border-color: #fefefe;
+  }
+  .rounded-social-buttons .social-button.instagram {
+	background: #ffbf69;
+  }
+
+  .rounded-social-buttons .social-button.instagram:hover, .rounded-social-buttons .social-button.instagram:focus {
+	color: #ffbf69;
+	background: #fefefe;
+	border-color: #fefefe;
+  }
