--- a/css/main.css
+++ b/css/main.css
@@ -143,9 +143,32 @@ div.circle ul li a {
 	align-items: center;
 }
 
-@media screen {
+@media screen and (max-width: 600px) {
+	.wrapper .static-txt {
+		font-size: 30px;
+		color: black;
+		font-weight: 600;
+		line-height: 80px;
+	}
 
-}
+	.wrapper .dynamic-txts {
+		margin-left: 1px;
+		line-height: 80px;
+		height: 90px;
+		overflow: hidden !important;
+	}
+
+	.dynamic-txts li{
+		list-style: none;
+		color: #ffbf69;
+		font-size: 30px;
+		font-weight: 600;
+		top: 0;
+		position: relative;
+		animation: slide 20s steps(5)
+		infinite;
+	}
+  }
 
 /* Footer CSS */
 footer {
