--- a/css/main.css
+++ b/css/main.css
@@ -150,7 +150,7 @@ div.circle ul li a {
 }
 
 .hero-h1 span {
-	color: #ffbf69;
+	color: #ffbf69!important;
 }
 
 /* @media screen and (max-width: 600px) {
