--- a/css/main.css
+++ b/css/main.css
@@ -301,6 +301,20 @@ div.circle ul li a {
    color: #DA6B4C;
 }
 
+.fitshare-ol li::marker {
+	color: #29489b;
+	font-weight: 800;
+	font-size: 20px;
+
+}
+.fitshare-target{
+	box-shadow: 0px 6px 6px rgb(0 0 0 / 10%);
+}
+
+.empathymap li::marker{
+	display: none !important;
+}
+
   @media screen and (max-width: 600px) {
 	.project-1 {
 		-webkit-clip-path: polygon(0 0, 100% 0, 100% 86%, 0 100%);
