--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,26 @@ body {
 	/* background-color: #f8f9fa!important; */
 }
 
+#myBtn {
+	display: none;
+	position: fixed;
+	bottom: 50px;
+	right: 30px;
+	z-index: 99;
+	border: none;
+	outline: none;
+	background-color: #80b918;
+	stroke-width: 1;
+	cursor: pointer;
+	padding: 20px 25px;
+	border-radius: 100px;
+	box-shadow: 0px 3px 8px -2px #000;
+  }
+
+  #myBtn:hover {
+	background-color: #FFBA08;
+  }
+
 .nav-link {
 	font-weight: 600;
 }
