--- a/css/main.css
+++ b/css/main.css
@@ -341,6 +341,26 @@ div.circle ul li a {
 
 } */
 
+.other-works-box {
+	transition: transform .2s;
+}
+
+.other-works-box:hover {
+	-ms-transform: scale(0.9); /* IE 9 */
+  -webkit-transform: scale(0.9); /* Safari 3-8 */
+  transform: scale(0.9);
+}
+@media screen and (max-width: 1024px) {
+	.bento-box {
+		display: none;
+	}
+}
+@media (min-width: 1025px) {
+	.bento-box-mobile {
+		display: none;
+	}
+
+}
   @media screen and (max-width: 600px) {
 	.project-1 {
 		-webkit-clip-path: polygon(0 0, 100% 0, 100% 86%, 0 100%);
