--- a/css/main.css
+++ b/css/main.css
@@ -254,8 +254,9 @@ div.circle ul li a {
 	box-shadow: 6px 6px 18px 0px rgba(0, 0, 0, 0.117);
 }
 .read-time {
+	color: black;
 	border:1px solid rgba(255, 255, 255, 0.746);
-	border-radius: 3rem;
+	/* border-radius: 3rem; */
 	font-weight: bold!important;
 	background-color:rgba(255, 255, 255, 0.438);
 }
