Updated all pages
Updated "Work with me" link on nav bar for every page.

--- a/css/main.css
+++ b/css/main.css
@@ -189,7 +189,7 @@ div.circle ul li a {
 	font-style: italic;
 }
 .hero-h1 span {
-	color: #B56576!important;
+	color: #aa4465!important;
 	font-weight: 700;
 }
 
